# Icarat-contact

./: CMakeLists.txt  Doxyfile  FDM_compliance_constraint_sensitivity.csv  FDM_constraint_sensitivity_objective.csv  FDM_sensitivity_objective.csv  LICENCE  README.md  constraint.cpp  constraint1_value.csv  constraint2_value.csv  easy24.vtk  easy6.vtk  fdm.cpp  function.csv  init.cfg  init.toml  init_rev.toml  multibody_element_presetting.cpp  multibody_presetting.hpp  node_pair_selector.cpp  objective.csv  opt-macro-gcmma.out  opt_macro_gcmma.cpp  opt_macro_gcmma.hpp  opt_multibody.cpp  opt_multibody.hpp  output-reverse.vtk  output-reverse150.vtk  output-side.vtk  output-unsym.vtk  output1200.vtk  output150.vtk  output2400.vtk  output9600.vtk  outputL.vtk  selector.cpp  sensitivity compliance constraint.csv  sensitivity displacement constraint.csv  sensitivity objective.csv  sensitivity volume constraint.csv  (+1 more)
cmake/: clang-debug.cmake  clang-release.cmake  gnu-debug.cmake  gnu-release.cmake  intel-debug.cmake  intel-release.cmake  mpi-debug.cmake  mpi-release.cmake
cmake/core/: functions.cmake  install_library.cmake  install_mpi_library.cmake
constraint/opt-buckling/: CMakeLists.txt  beam.toml  cantilever.toml  fdm.cpp  fdm.toml  opt_buckling.cpp  opt_buckling.hpp  sensitivity.cpp
constraint/opt-stress-buckling/: CMakeLists.txt  fdm.cpp  lbracket2D_coarse.toml  opt_stress_buckling.cpp  opt_stress_buckling.hpp  sensitivity.cpp
constraint/opt-stress-constraint/: CMakeLists.txt  fdm.cpp  fdm.toml  init.toml  opt_stress_constraint.cpp  opt_stress_constraint.hpp  sensitivity.cpp
dynamic/explicit-method/: CMakeLists.txt  explicit_method.cpp  explicit_method.hpp  init.toml
dynamic/opt-implicit/: CMakeLists.txt  fdm.cpp  fdm.toml  init_steady.toml  init_unsteady.toml  opt_implicit.cpp  opt_implicit.hpp  sensitivity.cpp
modal/: CMakeLists.txt  bridge_mapped.mdpa  init.toml  modal.cpp  modal.hpp
multi-scale/meta-finite/: CMakeLists.txt  fdm.cpp  fdm.toml  init_micro_large.toml  init_micro_small.toml  meta_material_finite.cpp  meta_material_finite.hpp  sensitivity.cpp
multi-scale/meta-material/: CMakeLists.txt  fdm.cpp  fdm.toml  init_micro.toml  init_micro_3d.toml  meta_material.cpp  meta_material.hpp  sensitivity.cpp
multi-scale/multi-scale/: CMakeLists.txt  init_macro.toml  init_micro.toml  multiscale.cpp  multiscale.hpp
multi-scale/opt-multi-scale/: CMakeLists.txt  fdm.cpp  fdm_macro.toml  fdm_micro.toml  init_macro.toml  init_micro.toml  opt_multiscale.cpp  opt_multiscale.hpp  sensitivity.cpp
opt-heat/: CMakeLists.txt  init_heat_2d.toml  init_heat_3d.toml  opt_heat.cpp  opt_heat.hpp
opt-macro-mma-nondesign/: CMakeLists.txt  init.toml  opt-macro-mma-nondesign.out  opt_macro_mma_nondesign.cpp  opt_macro_mma_nondesign.hpp
opt-macro-oc/: CMakeLists.txt  init.toml  opt_macro_oc.cpp  opt_macro_oc.hpp
opt-mma-HelmholtzFilter/: 2d.toml  3d.toml  CMakeLists.txt  fdm.cpp  fdm.toml  jobscript.sh  opt_mma_Helmholtz.cpp  opt_mma_Helmholtz.hpp
(+71 files in other folders)
